fixed bug in displaying cards on mobile

--- a/src/components/SheskaList/MiniCard.module.css
+++ b/src/components/SheskaList/MiniCard.module.css
@@ -90,7 +90,6 @@
     }
 
     .cardTest {
-        width: 80vw;
         aspect-ratio: 2 / 1;
     }
 }
